syntax = "proto3";
option csharp_namespace = "PbxApiControl";
package extension;

service ExtensionsInfoService {
    rpc GetExtensionInfo (ExtensionInfoRequest) returns (ExtensionInfoReply);
}
message ExtensionInfoRequest {
    string ext = 1;
}
message ExtensionInfoReply {
    string extension = 1;
    bool registered = 2;
    string forwarding_rules_status = 3;
    string queues_status = 4;
    repeated string groups = 5;
    repeated string queues = 6;
    repeated string ring_groups = 7;
}

